# mudstring-cpp

./: .gitignore  CMakeLists.txt  mudstring-config.cmake
include/mudstring/: color.hpp  mudstring.hpp  style.hpp  text.hpp
src/: CMakeLists.txt  color.cpp  mudstring.cpp  style.cpp  text.cpp
